--- a/src/v00v.Views/Playlists/PlaylistControl.xaml
+++ b/src/v00v.Views/Playlists/PlaylistControl.xaml
@@ -29,20 +29,20 @@
                 <ListBox.ContextMenu>
                     <ContextMenu>
                         <MenuItem Header="Copy Link" Command="{Binding CopyItemCommand, Mode=OneWay}"
-                                  CommandParameter="link"
+                                  CommandParameter="link" x:CompileBindings="False"
                                   IsVisible="{Binding !SelectedEntry.IsStatePlaylist, Mode=OneWay}">
                             <MenuItem.Icon>
                                 <Image Source="resm:v00v.MainApp.Icons.Dark.Edit32.png?assembly=v00v.MainApp" />
                             </MenuItem.Icon>
                         </MenuItem>
                         <MenuItem Header="Copy Title" Command="{Binding CopyItemCommand, Mode=OneWay}"
-                                  CommandParameter="title"
+                                  CommandParameter="title" x:CompileBindings="False"
                                   IsVisible="{Binding !SelectedEntry.IsStatePlaylist, Mode=OneWay}">
                             <MenuItem.Icon>
                                 <Image Source="resm:v00v.MainApp.Icons.Dark.Copy32.png?assembly=v00v.MainApp" />
                             </MenuItem.Icon>
                         </MenuItem>
-                        <MenuItem Header="Update" Command="{Binding ReloadCommand, Mode=OneWay}">
+                        <MenuItem Header="Update" Command="{Binding ReloadCommand, Mode=OneWay}" x:CompileBindings="False">
                             <MenuItem.Icon>
                                 <Image Source="resm:v00v.MainApp.Icons.Dark.Refresh32.png?assembly=v00v.MainApp" />
                             </MenuItem.Icon>
@@ -51,38 +51,38 @@
                             <MenuItem.Icon>
                                 <Image Source="resm:v00v.MainApp.Icons.Dark.Download32.png?assembly=v00v.MainApp" />
                             </MenuItem.Icon>
-                            <MenuItem Header="720p" Command="{Binding DownloadItemCommand, Mode=OneWay}"
+                            <MenuItem Header="720p" Command="{Binding DownloadItemCommand, Mode=OneWay}" x:CompileBindings="False"
                                       CommandParameter="simple">
                                 <MenuItem.Icon>
                                     <Image Source="resm:v00v.MainApp.Icons.Dark.VideoPlay32.png?assembly=v00v.MainApp" />
                                 </MenuItem.Icon>
                             </MenuItem>
-                            <MenuItem Header="HD" Command="{Binding DownloadItemCommand, Mode=OneWay}"
+                            <MenuItem Header="HD" Command="{Binding DownloadItemCommand, Mode=OneWay}" x:CompileBindings="False"
                                       CommandParameter="hd">
                                 <MenuItem.Icon>
                                     <Image Source="resm:v00v.MainApp.Icons.Dark.VideoHd32.png?assembly=v00v.MainApp" />
                                 </MenuItem.Icon>
                             </MenuItem>
-                            <MenuItem Header="Audio Only" Command="{Binding DownloadItemCommand, Mode=OneWay}"
+                            <MenuItem Header="Audio Only" Command="{Binding DownloadItemCommand, Mode=OneWay}" x:CompileBindings="False"
                                       CommandParameter="audio">
                                 <MenuItem.Icon>
                                     <Image Source="resm:v00v.MainApp.Icons.Dark.Audio32.png?assembly=v00v.MainApp" />
                                 </MenuItem.Icon>
                             </MenuItem>
-                            <MenuItem Header="Video Only" Command="{Binding DownloadItemCommand, Mode=OneWay}"
+                            <MenuItem Header="Video Only" Command="{Binding DownloadItemCommand, Mode=OneWay}" x:CompileBindings="False"
                                       CommandParameter="video">
                                 <MenuItem.Icon>
                                     <Image Source="resm:v00v.MainApp.Icons.Dark.VideoOnly32.png?assembly=v00v.MainApp" />
                                 </MenuItem.Icon>
                             </MenuItem>
-                            <MenuItem Header="Subtitles Only" Command="{Binding DownloadItemCommand, Mode=OneWay}"
+                            <MenuItem Header="Subtitles Only" Command="{Binding DownloadItemCommand, Mode=OneWay}" x:CompileBindings="False"
                                       CommandParameter="subs">
                                 <MenuItem.Icon>
                                     <Image Source="resm:v00v.MainApp.Icons.Dark.Sub32.png?assembly=v00v.MainApp" />
                                 </MenuItem.Icon>
                             </MenuItem>
                         </MenuItem>
-                        <MenuItem Header="Delete Files" Command="{Binding DeleteCommand, Mode=OneWay}">
+                        <MenuItem Header="Delete Files" Command="{Binding DeleteCommand, Mode=OneWay}" x:CompileBindings="False">
                             <MenuItem.Icon>
                                 <Image Source="resm:v00v.MainApp.Icons.Dark.Trash32.png?assembly=v00v.MainApp" />
                             </MenuItem.Icon>
