--- a/src/v00v.Views/Explorer/ExplorerControl.xaml
+++ b/src/v00v.Views/Explorer/ExplorerControl.xaml
@@ -2,13 +2,13 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:explorer="clr-namespace:v00v.Views.Explorer"
              xmlns:enums="clr-namespace:v00v.Model.Enums;assembly=v00v.Model">
     <UserControl.KeyBindings>
-        <KeyBinding Command="{Binding RunItemCommand, Mode=OneWay}" Gesture="Enter" />
-        <KeyBinding Command="{Binding DeleteItemCommand, Mode=OneWay}" Gesture="Delete" />
-        <KeyBinding Command="{Binding SetItemWatchStateCommand, Mode=OneWay}"
+        <KeyBinding Command="{Binding RunItemCommand, Mode=OneWay}" Gesture="Enter" x:CompileBindings="False"/>
+        <KeyBinding Command="{Binding DeleteItemCommand, Mode=OneWay}" Gesture="Delete" x:CompileBindings="False"/>
+        <KeyBinding Command="{Binding SetItemWatchStateCommand, Mode=OneWay}" x:CompileBindings="False"
                     CommandParameter="{x:Static enums:WatchState.Planned}" Gesture="q" />
-        <KeyBinding Command="{Binding SetItemWatchStateCommand, Mode=OneWay}"
+        <KeyBinding Command="{Binding SetItemWatchStateCommand, Mode=OneWay}" x:CompileBindings="False"
                     CommandParameter="{x:Static enums:WatchState.Watched}" Gesture="w" />
-        <KeyBinding Command="{Binding SetItemWatchStateCommand, Mode=OneWay}"
+        <KeyBinding Command="{Binding SetItemWatchStateCommand, Mode=OneWay}" x:CompileBindings="False"
                     CommandParameter="{x:Static enums:WatchState.Notset}" Gesture="e" />
     </UserControl.KeyBindings>
 
@@ -22,43 +22,43 @@
         </ListBox.DataTemplates>
         <ListBox.ContextMenu>
             <ContextMenu>
-                <MenuItem Header="Run" Command="{Binding RunItemCommand, Mode=OneWay}">
+                <MenuItem Header="Run" Command="{Binding RunItemCommand, Mode=OneWay}" x:CompileBindings="False">
                     <MenuItem.Icon>
                         <Image Source="resm:v00v.MainApp.Icons.Dark.VideoPlay32.png?assembly=v00v.MainApp" />
                     </MenuItem.Icon>
                 </MenuItem>
                 <MenuItem Header="To: Watched" Command="{Binding SetItemWatchStateCommand, Mode=OneWay}"
-                          CommandParameter="{x:Static enums:WatchState.Watched}"
+                          CommandParameter="{x:Static enums:WatchState.Watched}" x:CompileBindings="False"
                           IsVisible="{Binding !SelectedEntry.Watched, Mode=OneWay}">
                     <MenuItem.Icon>
                         <Image Source="resm:v00v.MainApp.Icons.Dark.Checkmark32.png?assembly=v00v.MainApp" />
                     </MenuItem.Icon>
                 </MenuItem>
                 <MenuItem Header="To: Planned" Command="{Binding SetItemWatchStateCommand, Mode=OneWay}"
-                          CommandParameter="{x:Static enums:WatchState.Planned}"
+                          CommandParameter="{x:Static enums:WatchState.Planned}" x:CompileBindings="False"
                           IsVisible="{Binding !SelectedEntry.Planned, Mode=OneWay}">
                     <MenuItem.Icon>
                         <Image Source="resm:v00v.MainApp.Icons.Dark.Time32.png?assembly=v00v.MainApp" />
                     </MenuItem.Icon>
                 </MenuItem>
-                <MenuItem Header="Copy Link" Command="{Binding CopyItemCommand, Mode=OneWay}" CommandParameter="link">
+                <MenuItem Header="Copy Link" Command="{Binding CopyItemCommand, Mode=OneWay}" x:CompileBindings="False" CommandParameter="link">
                     <MenuItem.Icon>
                         <Image Source="resm:v00v.MainApp.Icons.Dark.Edit32.png?assembly=v00v.MainApp" />
                     </MenuItem.Icon>
                 </MenuItem>
-                <MenuItem Header="Copy Title" Command="{Binding CopyItemCommand, Mode=OneWay}"
+                <MenuItem Header="Copy Title" Command="{Binding CopyItemCommand, Mode=OneWay}" x:CompileBindings="False"
                           CommandParameter="title">
                     <MenuItem.Icon>
                         <Image Source="resm:v00v.MainApp.Icons.Dark.Copy32.png?assembly=v00v.MainApp" />
                     </MenuItem.Icon>
                 </MenuItem>
-                <MenuItem Header="{Binding GotoMenu, Mode=OneWay}" Command="{Binding GoToParentCommand, Mode=OneWay}"
+                <MenuItem Header="{Binding GotoMenu, Mode=OneWay}" Command="{Binding GoToParentCommand, Mode=OneWay}" x:CompileBindings="False"
                           IsVisible="{Binding IsParentState, Mode=OneWay}">
                     <MenuItem.Icon>
                         <Image Source="resm:v00v.MainApp.Icons.Dark.LeftArrow32.png?assembly=v00v.MainApp" />
                     </MenuItem.Icon>
                 </MenuItem>
-                <MenuItem Header="Go to Playlist" Command="{Binding GoToParentCommand, Mode=OneWay}"
+                <MenuItem Header="Go to Playlist" Command="{Binding GoToParentCommand, Mode=OneWay}" x:CompileBindings="False"
                           IsVisible="{Binding !IsParentState, Mode=OneWay}">
                     <MenuItem.Icon>
                         <Image Source="resm:v00v.MainApp.Icons.Dark.RightArrow32.png?assembly=v00v.MainApp" />
@@ -68,24 +68,24 @@
                     <MenuItem.Icon>
                         <Image Source="resm:v00v.MainApp.Icons.Dark.Download32.png?assembly=v00v.MainApp" />
                     </MenuItem.Icon>
-                    <MenuItem Header="HD" Command="{Binding DownloadItemCommand, Mode=OneWay}" CommandParameter="hd">
+                    <MenuItem Header="HD" Command="{Binding DownloadItemCommand, Mode=OneWay}" CommandParameter="hd">x:CompileBindings="False"
                         <MenuItem.Icon>
                             <Image Source="resm:v00v.MainApp.Icons.Dark.VideoHd32.png?assembly=v00v.MainApp" />
                         </MenuItem.Icon>
                     </MenuItem>
-                    <MenuItem Header="Audio Only" Command="{Binding DownloadItemCommand, Mode=OneWay}"
+                    <MenuItem Header="Audio Only" Command="{Binding DownloadItemCommand, Mode=OneWay}" x:CompileBindings="False"
                               CommandParameter="audio">
                         <MenuItem.Icon>
                             <Image Source="resm:v00v.MainApp.Icons.Dark.Audio32.png?assembly=v00v.MainApp" />
                         </MenuItem.Icon>
                     </MenuItem>
-                    <MenuItem Header="Video Only" Command="{Binding DownloadItemCommand, Mode=OneWay}"
+                    <MenuItem Header="Video Only" Command="{Binding DownloadItemCommand, Mode=OneWay}" x:CompileBindings="False"
                               CommandParameter="video">
                         <MenuItem.Icon>
                             <Image Source="resm:v00v.MainApp.Icons.Dark.VideoOnly32.png?assembly=v00v.MainApp" />
                         </MenuItem.Icon>
                     </MenuItem>
-                    <MenuItem Header="Subtitles Only" Command="{Binding DownloadItemCommand, Mode=OneWay}"
+                    <MenuItem Header="Subtitles Only" Command="{Binding DownloadItemCommand, Mode=OneWay}" x:CompileBindings="False"
                               CommandParameter="subs">
                         <MenuItem.Icon>
                             <Image Source="resm:v00v.MainApp.Icons.Dark.Sub32.png?assembly=v00v.MainApp" />
@@ -93,13 +93,13 @@
                     </MenuItem>
                 </MenuItem>
                 <MenuItem Header="Clear state" Command="{Binding SetItemWatchStateCommand, Mode=OneWay}"
-                          CommandParameter="{x:Static enums:WatchState.Notset}"
+                          CommandParameter="{x:Static enums:WatchState.Notset}" x:CompileBindings="False"
                           IsVisible="{Binding SelectedEntry.WatchStateSet, Mode=OneWay}">
                     <MenuItem.Icon>
                         <Image Source="resm:v00v.MainApp.Icons.Dark.Xmark32.png?assembly=v00v.MainApp" />
                     </MenuItem.Icon>
                 </MenuItem>
-                <MenuItem Header="Delete" Command="{Binding DeleteItemCommand, Mode=OneWay}"
+                <MenuItem Header="Delete" Command="{Binding DeleteItemCommand, Mode=OneWay}" x:CompileBindings="False"
                           IsVisible="{Binding SelectedEntry.Downloaded, Mode=OneWay}">
                     <MenuItem.Icon>
                         <Image Source="resm:v00v.MainApp.Icons.Dark.Trash32.png?assembly=v00v.MainApp" />
