--- a/src/v00v.Views/Popup/Channel/ChannelPopupControl.xaml
+++ b/src/v00v.Views/Popup/Channel/ChannelPopupControl.xaml
@@ -8,10 +8,10 @@
                                   Text="{Binding ChannelId, Mode=TwoWay}" />
         <controls:ExtendedTextBox Grid.Row="1" Watermark="Title (optional)" Text="{Binding ChannelTitle, Mode=TwoWay}" />
         <Grid Grid.Row="2" ColumnDefinitions="auto,auto,*" Margin="0,15,0,0">
-            <Button Grid.Column="0" Classes="Link" Command="{Binding AddTagCommand, Mode=OneWay}">
+            <Button Grid.Column="0" Classes="Link" Command="{Binding AddTagCommand, Mode=OneWay}" x:CompileBindings="False">
                 <TextBlock Text="Add" />
             </Button>
-            <Button Grid.Column="1" Classes="Link" Command="{Binding SaveTagCommand, Mode=OneWay}">
+            <Button Grid.Column="1" Classes="Link" Command="{Binding SaveTagCommand, Mode=OneWay}" x:CompileBindings="False">
                 <TextBlock Text="Save" />
             </Button>
         </Grid>
@@ -29,7 +29,7 @@
         </ListBox>
         <Grid Grid.Row="5">
             <Button IsEnabled="{Binding !IsWorking, Mode=OneWay}" Classes="Link"
-                    Command="{Binding CloseChannelCommand, Mode=OneWay}">
+                    Command="{Binding CloseChannelCommand, Mode=OneWay}" x:CompileBindings="False">
                 <TextBlock Text="{Binding CloseText, Mode=OneWay}" />
             </Button>
         </Grid>
