--- a/src/v00v.Views/Explorer/ItemControl.xaml
+++ b/src/v00v.Views/Explorer/ItemControl.xaml
@@ -14,8 +14,8 @@
                   IsVisible="{Binding Path=WatchState, Converter={x:Static converters:EnumToBooleanConverter.s_instance}, ConverterParameter={x:Static enums:WatchState.Planned}, Mode=OneWay}" />
             <Button Grid.Row="0" Grid.Column="0" Grid.RowSpan="2" Width="51" Height="51" VerticalAlignment="Top"
                     BorderThickness="0" Padding="0" Background="Transparent" BorderBrush="Transparent"
-                    Command="{Binding $parent[ListBox].DataContext.OpenCommand, Mode=OneTime}" x:CompileBindings="False"
-                    CommandParameter="{Binding}">
+                    Command="{Binding $parent[ListBox].DataContext.OpenCommand, Mode=OneTime}"
+                    x:CompileBindings="False" CommandParameter="{Binding}">
                 <Image Source="{Binding Thumb, Mode=OneWay}" Opacity="{Binding OpacityThumb, Mode=OneWay}"
                        Stretch="Fill" VerticalAlignment="Center" HorizontalAlignment="Center" />
             </Button>
