--- a/src/v00v.Views/Playlists/PlaylistControl.xaml
+++ b/src/v00v.Views/Playlists/PlaylistControl.xaml
@@ -42,7 +42,8 @@
                                 <Image Source="resm:v00v.MainApp.Icons.Dark.Copy32.png?assembly=v00v.MainApp" />
                             </MenuItem.Icon>
                         </MenuItem>
-                        <MenuItem Header="Update" Command="{Binding ReloadCommand, Mode=OneWay}" x:CompileBindings="False">
+                        <MenuItem Header="Update" Command="{Binding ReloadCommand, Mode=OneWay}"
+                                  x:CompileBindings="False">
                             <MenuItem.Icon>
                                 <Image Source="resm:v00v.MainApp.Icons.Dark.Refresh32.png?assembly=v00v.MainApp" />
                             </MenuItem.Icon>
@@ -51,38 +52,39 @@
                             <MenuItem.Icon>
                                 <Image Source="resm:v00v.MainApp.Icons.Dark.Download32.png?assembly=v00v.MainApp" />
                             </MenuItem.Icon>
-                            <MenuItem Header="720p" Command="{Binding DownloadItemCommand, Mode=OneWay}" x:CompileBindings="False"
-                                      CommandParameter="simple">
+                            <MenuItem Header="720p" Command="{Binding DownloadItemCommand, Mode=OneWay}"
+                                      x:CompileBindings="False" CommandParameter="simple">
                                 <MenuItem.Icon>
                                     <Image Source="resm:v00v.MainApp.Icons.Dark.VideoPlay32.png?assembly=v00v.MainApp" />
                                 </MenuItem.Icon>
                             </MenuItem>
-                            <MenuItem Header="HD" Command="{Binding DownloadItemCommand, Mode=OneWay}" x:CompileBindings="False"
-                                      CommandParameter="hd">
+                            <MenuItem Header="HD" Command="{Binding DownloadItemCommand, Mode=OneWay}"
+                                      x:CompileBindings="False" CommandParameter="hd">
                                 <MenuItem.Icon>
                                     <Image Source="resm:v00v.MainApp.Icons.Dark.VideoHd32.png?assembly=v00v.MainApp" />
                                 </MenuItem.Icon>
                             </MenuItem>
-                            <MenuItem Header="Audio Only" Command="{Binding DownloadItemCommand, Mode=OneWay}" x:CompileBindings="False"
-                                      CommandParameter="audio">
+                            <MenuItem Header="Audio Only" Command="{Binding DownloadItemCommand, Mode=OneWay}"
+                                      x:CompileBindings="False" CommandParameter="audio">
                                 <MenuItem.Icon>
                                     <Image Source="resm:v00v.MainApp.Icons.Dark.Audio32.png?assembly=v00v.MainApp" />
                                 </MenuItem.Icon>
                             </MenuItem>
-                            <MenuItem Header="Video Only" Command="{Binding DownloadItemCommand, Mode=OneWay}" x:CompileBindings="False"
-                                      CommandParameter="video">
+                            <MenuItem Header="Video Only" Command="{Binding DownloadItemCommand, Mode=OneWay}"
+                                      x:CompileBindings="False" CommandParameter="video">
                                 <MenuItem.Icon>
                                     <Image Source="resm:v00v.MainApp.Icons.Dark.VideoOnly32.png?assembly=v00v.MainApp" />
                                 </MenuItem.Icon>
                             </MenuItem>
-                            <MenuItem Header="Subtitles Only" Command="{Binding DownloadItemCommand, Mode=OneWay}" x:CompileBindings="False"
-                                      CommandParameter="subs">
+                            <MenuItem Header="Subtitles Only" Command="{Binding DownloadItemCommand, Mode=OneWay}"
+                                      x:CompileBindings="False" CommandParameter="subs">
                                 <MenuItem.Icon>
                                     <Image Source="resm:v00v.MainApp.Icons.Dark.Sub32.png?assembly=v00v.MainApp" />
                                 </MenuItem.Icon>
                             </MenuItem>
                         </MenuItem>
-                        <MenuItem Header="Delete Files" Command="{Binding DeleteCommand, Mode=OneWay}" x:CompileBindings="False">
+                        <MenuItem Header="Delete Files" Command="{Binding DeleteCommand, Mode=OneWay}"
+                                  x:CompileBindings="False">
                             <MenuItem.Icon>
                                 <Image Source="resm:v00v.MainApp.Icons.Dark.Trash32.png?assembly=v00v.MainApp" />
                             </MenuItem.Icon>
