--- a/src/v00v.Views/Catalog/CatalogControl.xaml
+++ b/src/v00v.Views/Catalog/CatalogControl.xaml
@@ -31,8 +31,8 @@
                             <Image Source="resm:v00v.MainApp.Icons.Dark.Edit32.png?assembly=v00v.MainApp" />
                         </MenuItem.Icon>
                     </MenuItem>
-                    <MenuItem Header="Copy" Command="{Binding CopyChannelLinkCommand, Mode=OneTime}">
-                        x:CompileBindings="False"
+                    <MenuItem Header="Copy" Command="{Binding CopyChannelLinkCommand, Mode=OneTime}" 
+                              x:CompileBindings="False">
                         <MenuItem.Icon>
                             <Image Source="resm:v00v.MainApp.Icons.Dark.Copy32.png?assembly=v00v.MainApp" />
                         </MenuItem.Icon>
@@ -44,8 +44,8 @@
                             <Image Source="resm:v00v.MainApp.Icons.Dark.Network32.png?assembly=v00v.MainApp" />
                         </MenuItem.Icon>
                     </MenuItem>
-                    <MenuItem Header="Update" Command="{Binding ReloadCommand, Mode=OneTime}">
-                        x:CompileBindings="False"
+                    <MenuItem Header="Update" Command="{Binding ReloadCommand, Mode=OneTime}" 
+                              x:CompileBindings="False">
                         <MenuItem.Icon>
                             <Image Source="resm:v00v.MainApp.Icons.Dark.Refresh32.png?assembly=v00v.MainApp" />
                         </MenuItem.Icon>
