--- a/src/v00v.Views/Playlists/PlaylistControl.xaml
+++ b/src/v00v.Views/Playlists/PlaylistControl.xaml
@@ -17,7 +17,7 @@
         <Grid Width="220" ColumnDefinitions="*,auto" RowDefinitions="46,*" Background="#242e44">
             <TextBox Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2" Margin="10,9,8,9"
                      Text="{Binding SearchText, Mode=TwoWay}" ToolTip.Tip="Search" />
-            <ListBox Grid.Row="1" Grid.ColumnSpan="2" Items="{Binding Entries, Mode=OneWay}"
+            <ListBox Grid.Row="1" Grid.ColumnSpan="2" Grid.Column="0" Items="{Binding Entries, Mode=OneWay}"
                      VirtualizationMode="Simple" SelectedItem="{Binding SelectedEntry, Mode=TwoWay}"
                      BorderThickness="0" ScrollViewer.VerticalScrollBarVisibility="Hidden"
                      ScrollViewer.HorizontalScrollBarVisibility="Disabled" Background="Transparent">
